--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: rust
 cache: cargo
 
+before_script:
+- rustup component add rustfmt
+
+script:
+- cargo build
+- cargo test
+- cargo fmt -- --check
+
 # See https://github.com/diwic/dbus-rs/tree/350ca9bfa88e6e1964d3a0d4a128d63a885eb3f7#requirements
 addons:
   apt:
