--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "mprisctl"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["Christoph Rüßler <christoph.ruessler@mailbox.org>"]
 edition = "2021"
 
 [dependencies]
 dbus = "0.9.0"
-clap = "4.0.29"
+clap = { version = "4", features = [ "derive", "wrap_help" ] }
